--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi
 uvicorn
-requests       <-- HTTP রিকোয়েস্ট পাঠানোর জন্য
-beautifulsoup4 <-- স্ক্র্যাপ করা HTML পার্স করার জন্য (যদিও Vidssave JSON দেয়, এটা ভালো প্র্যাকটিস)
+requests
+beautifulsoup4
 yt-dlp
 pydantic
